# GameEngine3D

./: .classpath  .gitignore  .project  CMakeLists.txt  README.md  config.ini
engine/: CMakeLists.txt  config.h.in
engine/source/: Application.cpp  Engine.cpp  Engine.h  LibEngine.h
engine/source/core/: Application.cpp  Application.h  Engine.cpp  Engine.h
engine/source/graphics/: GraphicsAPI.cpp  GraphicsAPI.h  ShaderProgram.cpp  ShaderProgram.h  VertexLayout.h
engine/source/input/: InputManager.cpp  InputManager.h
engine/source/io/: FileSystem.cpp  FileSystem.h
engine/source/render/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderQueue.cpp  RenderQueue.h
engine/source/scene/: Component.cpp  Component.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h
engine/source/scene/components/: CameraComponent.cpp  CameraComponent.h  MeshComponent.cpp  MeshComponent.h  PlayerControllerComponent.cpp  PlayerControllerComponent.h
source/: Game.cpp  Game.h  TestObject.cpp  TestObject.h  main.cpp
src/com/alexian123/animation/: Animation.java  Animator.java  JointTransform.java  KeyFrame.java
src/com/alexian123/engine/: DisplayManager.java  EntityManager.java  GameManager.java  ParticleManager.java  PostProcessingManager.java  RenderingManager.java  ShadowManager.java  TextManager.java
src/com/alexian123/entities/: Camera.java  Entity.java  Light.java
src/com/alexian123/entity/: AnimatedEntity.java  Camera.java  Entity.java  Light.java  LightEntity.java  Player.java
src/com/alexian123/font/: Character.java  FontType.java  GUIText.java  Line.java  MetaFile.java  TextMeshCreator.java  TextMeshData.java  Word.java
src/com/alexian123/game/: Camera.java  Clock.java  Game.java  MousePicker.java  Scene.java  Settings.java  TestGame.java
src/com/alexian123/light/: Light.java
src/com/alexian123/lighting/: Light.java
src/com/alexian123/loader/: Loader.java  ModelData.java  ModelDataNM.java  OBJFileLoader.java  OBJFileLoaderNM.java  Vertex.java  VertexNM.java
src/com/alexian123/loader/collada/: AnimatedModelFileLoader.java  AnimationFileLoader.java  AnimationLoader.java  ColladaLoader.java  GeometryLoader.java  SkeletonLoader.java  SkinLoader.java
src/com/alexian123/loader/data/: AnimatedMeshData.java  AnimatedModelData.java  AnimationData.java  JointData.java  JointTransformData.java  KeyFrameData.java  MeshData.java  ModelData.java  ModelDataNM.java  SkeletonData.java  SkinningData.java  TextureData.java  Vertex.java  VertexSkinData.java  VertexT.java
src/com/alexian123/main/: Main.java
src/com/alexian123/model/: ModelData.java  ModelDataNM.java  ModelMesh.java  RawModel.java  TexturedModel.java
src/com/alexian123/model/animated/: AnimatedModel.java  Joint.java
src/com/alexian123/models/: RawModel.java  TexturedModel.java
src/com/alexian123/objConverter/: ModelData.java  OBJFileLoader.java  Vertex.java
src/com/alexian123/particle/: Particle.java  ParticleSorter.java  ParticleSystem.java
src/com/alexian123/play/: TestGame.java
src/com/alexian123/postProcessing/: BrightFilter.java  CombineFilter.java  ContrastChanger.java  HorizontalBlur.java  VerticalBlur.java
src/com/alexian123/renderEngine/: DisplayManager.java  EntityRenderer.java  Loader.java  OBJLoader.java  RawModel.java  Renderer.java  RenderingManager.java  TerrainRenderer.java
src/com/alexian123/renderer/: DisplayManager.java  EntityRenderer.java  EntityRendererNM.java  FontRenderer.java  GUIRenderer.java  IRenderer3D.java  Loader.java  ParticleRenderer.java  RenderingManager.java  Scene.java  SkyBoxRenderer.java  TerrainRenderer.java  WaterRenderer.java
src/com/alexian123/rendering/: AnimatedEntityRenderer.java  DisplayManager.java  EntityRenderer.java  EntityRendererNM.java  FontRenderer.java  GUIRenderer.java  ImageRenderer.java  ParticleRenderer.java  RenderingManager.java  Scene.java  ShadowRenderer.java  SkyBoxRenderer.java  TerrainRenderer.java  WaterRenderer.java
src/com/alexian123/rendering/postProcessing/: BrightFilter.java  CombineFilter.java  ContrastChanger.java  HorizontalBlur.java  IDualInputFilter.java  ISingleInputFilter.java  VerticalBlur.java
src/com/alexian123/shader/: AnimatedEntityShader.java  Attribute.java  BrightFilterShader.java  CombineFilterShader.java  ContrastShader.java  EntityShader.java  EntityShaderNM.java  FontShader.java  GUIShader.java  HorizontalBlurShader.java  IShader3D.java  ParticleShader.java  ShaderProgram.java  ShadowShader.java  SkyBoxShader.java  StaticShader.java  TerrainShader.java  Uniform.java  VerticalBlurShader.java  WaterShader.java  entityShader.frag  entityShader.vert  terrainShader.frag  terrainShader.vert
src/com/alexian123/shader/fragment/: combine_filter_fragment.glsl  entity_fragment.glsl  terrain_fragment.glsl
src/com/alexian123/shader/glsl/: entity_shader.frag  entity_shader.vert  entity_shader_nm.frag  entity_shader_nm.vert  font_shader.frag  gui_shader.vert  particle_shader.frag  particle_shader.vert  skybox_shader.frag  terrain_shader.frag  terrain_shader.vert  water_shader.frag  water_shader.vert
src/com/alexian123/shaders/: ShaderProgram.java  StaticShader.java  shader.frag  shader.vert
src/com/alexian123/shadow/: ShadowBox.java  ShadowFrameBuffer.java
src/com/alexian123/terrain/: HeightGenerator.java  Terrain.java  TerrainGrid.java  Water.java  WaterFrameBuffers.java
src/com/alexian123/test/: Main.java  TestGame.java
src/com/alexian123/texture/: GUITexture.java  ModelTexture.java  ParticleTexture.java  TerrainTexture.java  TerrainTexturePack.java  Texture.java  TextureData.java
src/com/alexian123/textures/: ModelTexture.java
src/com/alexian123/util/: Clock.java  Constants.java  DepthBufferType.java  Fbo.java  IniParser.java  Maths.java  MousePicker.java  Scene.java  TimeOfDay.java  Vertex.java  VertexNM.java
src/com/alexian123/utils/: Maths.java
src/com/alexian123/water/: Water.java  WaterFrameBuffers.java
(+73 files in other folders)
